[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/dialogue_tree/scripts/dialogue.gd" type="Script" id=1]
[ext_resource path="res://art/Ships/Rowboat/rowboat_deck.png" type="Texture" id=2]
[ext_resource path="res://art/Ships/Rowboat/rowboat_hull.png" type="Texture" id=3]
[ext_resource path="res://art/Ships/Rowboat/rowboat_backoar.png" type="Texture" id=4]
[ext_resource path="res://art/Ships/Rowboat/rowboat_frontoar.png" type="Texture" id=5]
[ext_resource path="res://scripts/OarArea.gd" type="Script" id=7]
[ext_resource path="res://scenes/Item.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/RowboatShipEnviroment.gd" type="Script" id=9]
[ext_resource path="res://art/GUI/Etext.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "row"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Deck/Back Oar:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hull/Front Oar:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 0 ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.0
height = 16.0

[node name="Rowboat" type="YSort" groups=[
"Ship Enviroment",
]]
script = ExtResource( 9 )
ship_type = 1
dialogue_position = Vector2( 64, -64 )
player_spawn_location = Vector2( 60, -36 )

[node name="Deck" type="Sprite" parent="."]
position = Vector2( 65, -48 )
texture = ExtResource( 2 )
offset = Vector2( 0, 11.5 )

[node name="Back Oar" type="Sprite" parent="Deck"]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )
offset = Vector2( 0.5, 0 )
hframes = 8

[node name="Hull" type="Sprite" parent="."]
position = Vector2( 64, -22 )
texture = ExtResource( 3 )
offset = Vector2( 0.5, -10 )

[node name="Front Oar" type="Sprite" parent="Hull"]
position = Vector2( 0, -4 )
texture = ExtResource( 5 )
offset = Vector2( 0, 0.5 )
hframes = 8

[node name="Deck Boundary" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 65, -37 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Deck Boundary"]
polygon = PoolVector2Array( -31, 7, -31, -2, -29, -4, -19, -7, -14, -8, 13, -8, 22, -5, 27, -2, 29, 0, 29, 4, 26, 7, 13, 12, -19, 12, -24, 11, -29, 9, -31, 7, -33, 8, -23, 14, 13, 14, 26, 9, 31, 3, 31, -1, 28, -3, 23, -6, 12, -10, -13, -10, -33, -5, -33, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/row = SubResource( 1 )

[node name="Oar Area" type="Area2D" parent="."]
visible = false
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oar Area"]
position = Vector2( 65, -35 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Oar Area"]
visible = false
position = Vector2( 48, -64 )
texture = ExtResource( 10 )

[node name="EnterExit Area" type="Area2D" parent="."]
visible = false
monitoring = false
monitorable = false

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="EnterExit Area"]
position = Vector2( 65, -37 )
polygon = PoolVector2Array( -30, 7, -30, -2, -28, -4, -14, -7, 12, -7, 21, -4, 26, -1, 28, 0, 28, 4, 26, 6, 13, 11, -19, 11, -24, 10, -29, 8, -30, 7, -34, 8, -23, 15, 13, 15, 27, 9, 32, 3, 32, -1, 28, -4, 22, -7, 12, -11, -13, -11, -34, -5, -34, 8 )

[node name="Item" parent="." instance=ExtResource( 8 )]
position = Vector2( 45.7372, -36.364 )
global_item_scale = Vector2( 1, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="Oar Area" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Oar Area" to="Oar Area" method="_on_Oar_Area_body_entered"]
[connection signal="body_entered" from="Oar Area" to="." method="_on_Oar_Area_body_entered"]
[connection signal="body_exited" from="Oar Area" to="Oar Area" method="_on_Oar_Area_body_exited"]
[connection signal="body_exited" from="Oar Area" to="." method="_on_Oar_Area_body_exited"]
[connection signal="body_entered" from="EnterExit Area" to="." method="_on_EnterExit_Area_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
